[tool.poetry]
name = "nhentai"
version = "0.5.3"
description = "nhentai doujinshi downloader"
authors = ["Ricter Z <ricterzheng@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
soupsieve = "^2.4"
beautifulsoup4 = "^4.11.2"
tabulate = "^0.9.0"
iso8601 = "^1.1.0"
urllib3 = "^1.26.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
